--- a/index-ar.html
+++ b/index-ar.html
@@ -71,9 +71,9 @@
                                             فيديو
                                         </a>
                                     </li>
-                                    <li><a href="#favourites">
-                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
-                                            المفضلات
+                                    <li><a href="#contact">
+                                            <i class="fa-solid fa-envelope fs-18 ml-10"></i>
+                                            تواصل معي
                                         </a>
                                     </li>
                                     <li><a href="#favourites">
@@ -494,12 +494,15 @@
                 <div class="content">
                     <!-- <img src="./IMGS/about-information.png" class="w-10 ml-auto mr-auto d-block"> -->
                     <p class="mb-10">
-                        اسمي <span class="c-red">أسامة الطالب</span> الان أنا مطور واجهة الويب يمكنني تحويل تصميم موقعك
+                        اسمي <span class="c-red">أسامة ,</span> الان أنا مطور واجهة الويب يمكنني تحويل
+                        تصميم موقعك
                         الى (اتش تي ام
                         ال - سي اس
-                        اس - جافاسكريبت) من اجل استخدامهم ك بورتفوليو, متجر ... يمكنك رؤية <a class="c-blue u-line"
-                            href="#projects">مشاريعي</a> و الحصول على <a href="#services">خدماتي</a>.
+                        اس - جافاسكريبت) من اجل استخدامهم ك بورتفوليو, متجر ... يمكنك رؤية <a class="c-blue"
+                            href="#projects">مشاريعي</a> و الحصول على <a class="c-blue"
+                            href="#services">خدماتي</a>.
                     </p>>
+                    <br>
                     <a class="about-btn c-blue"
                         href="./about-page">
                         اقرأ المزيد
@@ -507,6 +510,10 @@
                     </a>
                 </div>
             </div>
+        </section>
+        <section class="contact p-20"
+            id="contact">
+            <h1 class="sec-title">تواصل معي</h1>
         </section>
         <a href="#goup"
             class="goUp">
