--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                                             video
                                         </a>
                                     </li>
-                                    <li><a href="#favourites">
-                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
-                                            favourites
+                                    <li><a href="#contact">
+                                            <i class="fa-solid fa-envelope fs-18 mr-10"></i>
+                                            contact me
                                         </a>
                                     </li>
                                     <li><a href="#favourites">
@@ -500,13 +500,15 @@
                 <div class="content">
                     <!-- <img src="./IMGS/about-information.png" class="w-10 ml-auto mr-auto d-block"> -->
                     <p class="mb-10">
-                        My name is <span class="c-red">OUSSAMA ET-TALIB.</span> Now I am a Front-End Developer
+                        My name is <span class="c-red ff-BrunoAceSC">OUSSAMA,</span> Now I am a Front-End
+                        Developer
                         I can convert your UI/UX design to (HTML - CSS - JavaSsript) to use it as a website
-                        Portfollio, store ... You can check <a class="c-blue u-line"
+                        Portfollio, store ... You can check <a class="c-blue"
                             href="#projects">My projects</a>
-                        & get <a class="c-blue  u-line"
+                        & get <a class="c-blue"
                             href="#services">My services</a>.
                     </p>
+                    <br>
                     <a class="about-btn c-blue"
                         href="./about-page">
                         read more
@@ -514,6 +516,10 @@
                     </a>
                 </div>
             </div>
+        </section>
+        <section class="contact p-20"
+            id="contact">
+            <h1 class="sec-title">contact me</h1>
         </section>
         <a href="#goup"
             class="goUp">
