--- a/index-ar.html
+++ b/index-ar.html
@@ -76,9 +76,9 @@
                                             تواصل معي
                                         </a>
                                     </li>
-                                    <li><a href="#favourites">
-                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
-                                            المفضلات
+                                    <li><a href="#footer">
+                                            <i class="fa-solid fa-circle-arrow-down fs-18 ml-10"></i>
+                                            أخر الصفحة
                                         </a>
                                     </li>
                                 </div>
@@ -511,9 +511,32 @@
                 </div>
             </div>
         </section>
-        <section class="contact p-20"
+        <section class="contact p-20 bg-eee"
             id="contact">
             <h1 class="sec-title">تواصل معي</h1>
+            <div class="container bg-ddd p-20 d-flex">
+                <form class="contact-area "
+                    id="contact-area"
+                    action="">
+                    <label for="contact-area">الاسم الكامل: <span class="c-888 fs-14 ml-5">(اختياري)</span> </label>
+                    <input type="text"
+                        placeholder="اكتب اسمك الكامل">
+                    <label for="contact-area">بريدك الالكتروني: <span class="c-red fs-14 ml-5">(مطلوب)</span></label>
+                    <input type="email"
+                        placeholder="اكتب بريدك الالكتروني">
+                    <label for="contact-area">رسالتك: <span class="c-red fs-14 ml-5">(مطلوب)</span></label>
+                    <textarea name="contact-area"
+                        placeholder="اكتب رسالتك..."></textarea>
+                    <button>أرسل</button>
+                </form>
+                <div class="orContact bg-eee w-40 p-10 text-capa">
+                    <h1>بطريقة اخرى ...</h1>
+                    <p>تواصل معي بوضع رسالتك في صندوق بريدي الالكتروني</p>
+                    <a class="contactMail text-lower"
+                        href="https://bit.ly/44FgIKK"
+                        target="_blank">oussamata858@gmail.com</a>
+                </div>
+            </div>
         </section>
         <a href="#goup"
             class="goUp">
