--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                                             contact me
                                         </a>
                                     </li>
-                                    <li><a href="#favourites">
-                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
-                                            favourites
+                                    <li><a href="#footer">
+                                            <i class="fa-solid fa-circle-arrow-down fs-18 mr-10"></i>
+                                            Footer
                                         </a>
                                     </li>
                                 </div>
@@ -517,9 +517,32 @@
                 </div>
             </div>
         </section>
-        <section class="contact p-20"
+        <section class="contact p-20 bg-eee"
             id="contact">
             <h1 class="sec-title">contact me</h1>
+            <div class="container bg-ddd p-20 d-flex">
+                <form class="contact-area "
+                    id="contact-area"
+                    action="">
+                    <label for="contact-area">Full Name: <span class="c-888 fs-14 ml-5">(option)</span> </label>
+                    <input type="text"
+                        placeholder="Type Your Full Name">
+                    <label for="contact-area">Your Email: <span class="c-red fs-14 ml-5">(requied)</span></label>
+                    <input type="email"
+                        placeholder="Type Your Email">
+                    <label for="contact-area">Your Message: <span class="c-red fs-14 ml-5">(requied)</span></label>
+                    <textarea name="contact-area"
+                        placeholder="Type Your Message..."></textarea>
+                    <button>send</button>
+                </form>
+                <div class="orContact bg-eee w-40 p-10 text-capa">
+                    <h1>by an other way ...</h1>
+                    <p>Contact me by put your message in my mail box </p>
+                    <a class="contactMail text-lower"
+                        href="https://bit.ly/44FgIKK"
+                        target="_blank">oussamata858@gmail.com</a>
+                </div>
+            </div>
         </section>
         <a href="#goup"
             class="goUp">
