--- a/index-ar.html
+++ b/index-ar.html
@@ -514,17 +514,17 @@
         <section class="contact p-20 bg-eee"
             id="contact">
             <h1 class="sec-title">تواصل معي</h1>
-            <div class="container bg-ddd p-20 d-flex">
+            <div class="container bg-ddd p-20">
                 <form class="contact-area "
                     id="contact-area"
                     action="">
-                    <label for="contact-area">الاسم الكامل: <span class="c-888 fs-14 ml-5">(اختياري)</span> </label>
+                    <label for="contact-area">الاسم الكامل: <span class="c-888 fs-14 mr-5">(اختياري)</span> </label>
                     <input type="text"
                         placeholder="اكتب اسمك الكامل">
-                    <label for="contact-area">بريدك الالكتروني: <span class="c-red fs-14 ml-5">(مطلوب)</span></label>
+                    <label for="contact-area">بريدك الالكتروني: <span class="c-red fs-14 mr-5">(مطلوب)</span></label>
                     <input type="email"
                         placeholder="اكتب بريدك الالكتروني">
-                    <label for="contact-area">رسالتك: <span class="c-red fs-14 ml-5">(مطلوب)</span></label>
+                    <label for="contact-area">رسالتك: <span class="c-red fs-14 mr-5">(مطلوب)</span></label>
                     <textarea name="contact-area"
                         placeholder="اكتب رسالتك..."></textarea>
                     <button>أرسل</button>
