--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <section class="contact p-20 bg-eee"
             id="contact">
             <h1 class="sec-title">contact me</h1>
-            <div class="container bg-ddd p-20 d-flex">
+            <div class="container bg-ddd p-20">
                 <form class="contact-area "
                     id="contact-area"
                     action="">
@@ -536,8 +536,11 @@
                     <button>send</button>
                 </form>
                 <div class="orContact bg-eee w-40 p-10 text-capa">
+                    <img class="w-20"
+                        src="./IMGS/mail-box.png"
+                        alt="">
                     <h1>by an other way ...</h1>
-                    <p>Contact me by put your message in my mail box </p>
+                    <p>Contact me by putting your message in my mail box </p>
                     <a class="contactMail text-lower"
                         href="https://bit.ly/44FgIKK"
                         target="_blank">oussamata858@gmail.com</a>
