--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="https://www.youtube.com/@OussamaTalib.GameOver/featured"
+                    <a href="https://www.youtube.com/@game.over8"
                         target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
@@ -553,6 +553,64 @@
             <span>go to top</span>
         </a>
     </main>
+    <footer class="p-rel"
+        id="footer">
+        <div class="container">
+            <div class="footer-start">
+                <a class="logo flex-center"
+                    href="./index.html">ot</a>
+                <h1 class="ff-Teko">oussama et-talib</h1>
+            </div>
+            <div class="footer-links">
+                <div class="main-links">
+                    <h3 class="footer-items-title">main links</h3>
+                    <a href="#">home</a>
+                    <a href="#projects">projects</a>
+                    <a href="#services">services</a>
+                    <a href="#about">about</a>
+                </div>
+                <div class="more-links">
+                    <h3 class="footer-items-title">more</h3>
+                    <a href="#favourites">favourites</a>
+                    <a href="#skills">my skills</a>
+                    <a href="#video">video</a>
+                    <a href="#contact">contact me</a>
+                </div>
+            </div>
+            <div class="footer-media">
+                <div class="footer-media-links">
+                    <h3 class="footer-items-title">social media</h3>
+                    <a href="https://www.facebook.com/profile.php?id=100010035220125"
+                        target="_blank">facebook</a>
+                    <a href="https://www.instagram.com/oussama_talib.8/"
+                        target="_blank">instagram</a>
+                    <a href="https://www.youtube.com/@game.over8"
+                        target="_blank">youtube</a>
+                </div>
+                <br>
+                <hr>
+                <br>
+                <div class="footer-btns flex-center">
+                    <a class="search-bar flex-center fs-10 br-circle"
+                        href="#search-bar"
+                        title="Go to search bar">
+                        <div class="i fa-solid fa-search"></div>
+                    </a>
+                    <a class="lang-change flex-center fs-10 br-circle"
+                        href="./index-ar.html"
+                        title="Translate To Arabic">ar</a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright flex-between">
+            <p class="c-white text-capa flex-center"> <i class="fa-regular fa-copyright mr-5"></i> copyrights reserved
+                by <a class="main-c text-upper w-fit ml-10 mr-10"
+                    href="#">OT</a></p>
+            <p class="flex-center c-white text-capa">designed by <a class="main-c text-upper w-fit ml-10 mr-10"
+                    href="https://www.instagram.com/oussama_talib.8/"
+                    target="_blank">oussama</a> with <i class="fa-solid fa-heart ml-10 c-red"></i></p>
+        </div>
+    </footer>
 </body>
 
 </html>
