--- a/index-ar.html
+++ b/index-ar.html
@@ -544,6 +544,64 @@
             <span>اذهب للأعلى</span>
         </a>
     </main>
+    <footer class="ar p-rel"
+        id="footer">
+        <div class="container">
+            <div class="footer-start">
+                <a class="logo flex-center"
+                    href="./index.html">ot</a>
+                <h1 class="">أسامة الطالب</h1>
+            </div>
+            <div class="footer-links">
+                <div class="main-links">
+                    <h3 class="footer-items-title">الروابط الرئيسية</h3>
+                    <a href="#">الرئيسة</a>
+                    <a href="#projects">مشاريع</a>
+                    <a href="#services">خدمات</a>
+                    <a href="#about">حولي</a>
+                </div>
+                <div class="more-links">
+                    <h3 class="footer-items-title">المزيد</h3>
+                    <a href="#favourites">المفضلات</a>
+                    <a href="#skills">مهاراتي</a>
+                    <a href="#video">فيديو</a>
+                    <a href="#contact">تواصل معي</a>
+                </div>
+            </div>
+            <div class="footer-media">
+                <div class="footer-media-links">
+                    <h3 class="footer-items-title">مواقع التواصل الاجتماعي</h3>
+                    <a href="https://www.facebook.com/profile.php?id=100010035220125"
+                        target="_blank">فايسبوك</a>
+                    <a href="https://www.instagram.com/oussama_talib.8/"
+                        target="_blank">أنستقرام</a>
+                    <a href="https://www.youtube.com/@game.over8"
+                        target="_blank">يوتيوب</a>
+                </div>
+                <br>
+                <hr>
+                <br>
+                <div class="footer-btns flex-center">
+                    <a class="search-bar flex-center fs-10 br-circle"
+                        href="#search-bar"
+                        title="اذهب الى محرك البحث">
+                        <div class="i fa-solid fa-search"></div>
+                    </a>
+                    <a class="lang-change flex-center fs-10 br-circle"
+                        href="./index.html"
+                        title="ترجم الصفحة الى الانجليزية">انج</a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright flex-between">
+            <p class="c-white text-capa flex-center"> <i class="fa-regular fa-copyright ml-5"></i> 2023 جميع الحقوق
+                محفوظة لدى <a class="main-c text-upper w-fit ml-5 mr-5"
+                    href="#">OT</a></p>
+            <p class="flex-center c-white text-capa">تصميم من طرف <a class="main-c text-upper w-fit ml-5 mr-5"
+                    href="https://www.instagram.com/oussama_talib.8/"
+                    target="_blank">أسامة</a> مع <i class="fa-solid fa-heart mr-5 c-red"></i></p>
+        </div>
+    </footer>
 </body>
 
 </html>
