--- a/index.html
+++ b/index.html
@@ -603,12 +603,12 @@
             </div>
         </div>
         <div class="copyright flex-between">
-            <p class="c-white text-capa flex-center"> <i class="fa-regular fa-copyright mr-5"></i> copyrights reserved
-                by <a class="main-c text-upper w-fit ml-10 mr-10"
+            <p class="c-white text-capa flex-center"> <i class="fa-regular fa-copyright mr-5"></i> 2023 all rights the
+                reserved by <a class="main-c text-upper w-fit ml-5 mr-5"
                     href="#">OT</a></p>
-            <p class="flex-center c-white text-capa">designed by <a class="main-c text-upper w-fit ml-10 mr-10"
+            <p class="flex-center c-white text-capa">designed by <a class="main-c text-upper w-fit ml-5 mr-5"
                     href="https://www.instagram.com/oussama_talib.8/"
-                    target="_blank">oussama</a> with <i class="fa-solid fa-heart ml-10 c-red"></i></p>
+                    target="_blank">oussama</a> with <i class="fa-solid fa-heart ml-5 c-red"></i></p>
         </div>
     </footer>
 </body>
