--- a/index-ar.html
+++ b/index-ar.html
@@ -34,6 +34,13 @@
 </head>
 
 <body class="both ar">
+    <form class="search-page">
+        <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
+        <input type="text" id="search-page" placeholder="بحث...">
+        <button>
+            <i class="fa-solid fa-search"></i>
+        </button>
+    </form>
     <header class="p-abs">
         <div class="container flex-center p-rel"
             id="goup">
@@ -116,7 +123,6 @@
             </nav>
             <div class="header-btns p-abs d-flex">
                 <a class="search-bar flex-center fs-10 br-circle"
-                    href="#search-bar"
                     title="اذهب الى محرك البحث">
                     <div class="i fa-solid fa-search"></div>
                 </a>
@@ -583,7 +589,6 @@
                 <br>
                 <div class="footer-btns flex-center">
                     <a class="search-bar flex-center fs-10 br-circle"
-                        href="#search-bar"
                         title="اذهب الى محرك البحث">
                         <div class="i fa-solid fa-search"></div>
                     </a>
@@ -602,6 +607,8 @@
                     target="_blank">أسامة</a> مع <i class="fa-solid fa-heart mr-5 c-red"></i></p>
         </div>
     </footer>
+    <script src="./master.js"></script>
+
 </body>
 
 </html>
