--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 </head>
 
 <body class="both eng">
+    <form class="search-page">
+        <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
+        <input type="text" id="search-page" placeholder="Search...">
+        <button>
+            <i class="fa-solid fa-search"></i>
+        </button>
+    </form>
     <header class="p-abs">
         <div class="container flex-center p-rel"
             id="goup">
@@ -118,7 +125,6 @@
             </nav>
             <div class="header-btns p-abs d-flex">
                 <a class="search-bar flex-center fs-10 br-circle"
-                    href="#search-bar"
                     title="Go to search bar">
                     <div class="i fa-solid fa-search"></div>
                 </a>
@@ -592,7 +598,6 @@
                 <br>
                 <div class="footer-btns flex-center">
                     <a class="search-bar flex-center fs-10 br-circle"
-                        href="#search-bar"
                         title="Go to search bar">
                         <div class="i fa-solid fa-search"></div>
                     </a>
@@ -611,6 +616,7 @@
                     target="_blank">oussama</a> with <i class="fa-solid fa-heart ml-5 c-red"></i></p>
         </div>
     </footer>
+    <script src="./master.js"></script>
 </body>
 
 </html>
