--- a/index-ar.html
+++ b/index-ar.html
@@ -36,7 +36,7 @@
 <body class="both ar">
     <form class="search-page">
         <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
-        <input type="text" id="search-page" placeholder="بحث...">
+        <input type="text" id="search-page" placeholder="بحث ...">
         <button>
             <i class="fa-solid fa-search"></i>
         </button>
@@ -588,12 +588,12 @@
                 <hr>
                 <br>
                 <div class="footer-btns flex-center">
-                    <a class="search-bar flex-center fs-10 br-circle"
+                    <a class="search-bar search-bar-footer flex-center fs-10 br-circle"
                         title="اذهب الى محرك البحث">
                         <div class="i fa-solid fa-search"></div>
                     </a>
                     <a class="lang-change flex-center fs-10 br-circle"
-                        href="./index.html"
+                        href="./index.html#footer"
                         title="ترجم الصفحة الى الانجليزية">انج</a>
                 </div>
             </div>
