--- a/index.html
+++ b/index.html
@@ -597,12 +597,12 @@
                 <hr>
                 <br>
                 <div class="footer-btns flex-center">
-                    <a class="search-bar flex-center fs-10 br-circle"
+                    <a class="search-bar search-bar-footer flex-center fs-10 br-circle"
                         title="Go to search bar">
                         <div class="i fa-solid fa-search"></div>
                     </a>
                     <a class="lang-change flex-center fs-10 br-circle"
-                        href="./index-ar.html"
+                        href="./index-ar.html#footer"
                         title="Translate To Arabic">ar</a>
                 </div>
             </div>
