--- a/index-ar.html
+++ b/index-ar.html
@@ -36,7 +36,8 @@
 <body class="both ar">
     <form class="search-page">
         <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
-        <input type="text" id="search-page" placeholder="بحث ...">
+        <h1 class="p-abs">أكتب عن ماذا تبحث ؟</h1>
+        <input type="search" id="search-page" placeholder="بحث ...">
         <button>
             <i class="fa-solid fa-search"></i>
         </button>
