--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <body class="both eng">
     <form class="search-page">
         <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
-        <input type="text" id="search-page" placeholder="Search...">
+        <h1 class="p-abs">Type what are you <br> looking for?</h1>
+        <input type="search" id="search-page" placeholder="Search...">
         <button>
             <i class="fa-solid fa-search"></i>
         </button>
