--- a/index.html
+++ b/index.html
@@ -194,9 +194,8 @@
                 <div class="projects-holder">
                     <div class="project"
                         style="background-image: url(./IMGS/leon-pre.png);">
-                        <div class="project-title p-abs c-white ">
-                            <h1>project one</h1>
-                            <h2>leon</h2>
+                        <div class="project-title p-abs c-white">
+                            <h2 class="p-rel">leon</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
@@ -209,7 +208,6 @@
                     <div class="project"
                         style="background-image: url(./IMGS/kasper-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project two</h1>
                             <h2>kasper</h2>
                         </div>
                         <div class="project-btns">
@@ -223,7 +221,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/talib-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project three</h1>
                             <h2>talib</h2>
                         </div>
                         <div class="project-btns">
@@ -237,7 +234,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/dash-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project four</h1>
                             <h2>dashboard</h2>
                         </div>
                         <div class="project-btns">
@@ -251,7 +247,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/product-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project five</h1>
                             <h2>product preview</h2>
                         </div>
                         <div class="project-btns">
@@ -265,7 +260,6 @@
                     <div class="project"
                         style="background-image: url(./IMGS/ot-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project six</h1>
                             <h2>ot</h2>
                         </div>
                         <div class="project-btns">
