--- a/index-ar.html
+++ b/index-ar.html
@@ -192,12 +192,11 @@
                     <div class="project "
                         style="background-image: url(./IMGS/leon-pre.png);">
                         <div class="project-title p-abs c-white ">
-                            <h1>المشروع الأول</h1>
                             <h2>leon</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">معلومات</a>
+                            href="./Projects Info Pages/AR/leon-ar.html">معلومات</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-01-leon/"
                                 target="_blank">معاينة</a>
@@ -206,7 +205,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/kasper-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>المشروع الثاني</h1>
                             <h2>kasper</h2>
                         </div>
                         <div class="project-btns">
@@ -220,7 +218,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/talib-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>المشروع الثالث</h1>
                             <h2>talib</h2>
                         </div>
                         <div class="project-btns">
@@ -234,7 +231,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/dash-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>المشروع الرابع</h1>
                             <h2>dashboard</h2>
                         </div>
                         <div class="project-btns">
@@ -248,7 +244,6 @@
                     <div class="project "
                         style="background-image: url(./IMGS/product-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>المشروع الخامس</h1>
                             <h2>product preview</h2>
                         </div>
                         <div class="project-btns">
@@ -262,7 +257,6 @@
                     <div class="project"
                         style="background-image: url(./IMGS/ot-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>المشروع السادس</h1>
                             <h2>ot</h2>
                         </div>
                         <div class="project-btns">
@@ -609,7 +603,7 @@
         </div>
     </footer>
     <script src="./master.js"></script>
-
+    <script src="/master2.js"></script>
 </body>
 
 </html>
