--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="both eng">
     <form class="search-page">
-        <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
+        <i id="cancle-btn" class="fa-regular fa-circle-xmark p-abs"></i>
         <h1 class="p-abs">Type what are you <br> looking for?</h1>
         <input type="search" id="search-page" placeholder="Search...">
         <button>
@@ -199,7 +199,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">info</a>
+                                href="./Projects Info Pages//ENG/leon.html">info</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-01-leon/"
                                 target="_blank">preview</a>
@@ -612,6 +612,7 @@
         </div>
     </footer>
     <script src="./master.js"></script>
+    <script src="/master2.js"></script>
 </body>
 
 </html>
