--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="both eng">
     <form class="search-page">
-        <i id="cancle-btn" class="fa-regular fa-circle-xmark p-abs"></i>
+        <i id="cancle-btn" class="fa-solid fa-xmark p-abs flex-center"></i>
         <h1 class="p-abs">Type what are you <br> looking for?</h1>
         <input type="search" id="search-page" placeholder="Search...">
         <button>
@@ -127,7 +127,7 @@
             <div class="header-btns p-abs d-flex">
                 <a class="search-bar flex-center fs-10 br-circle"
                     title="Go to search bar">
-                    <div class="i fa-solid fa-search"></div>
+                    <i class="fa-solid fa-search search-bar"></i>
                 </a>
                 <a class="lang-change flex-center fs-10 br-circle"
                     href="./index-ar.html"
@@ -212,7 +212,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">info</a>
+                                href="./Projects Info Pages/ENG/kasper.html">info</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-02-Kaspr/"
                                 target="_blank">preview</a>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">info</a>
+                                href="./Projects Info Pages/ENG/talib.html">info</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-03-Elzero/"
                                 target="_blank">preview</a>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">info</a>
+                                href="./Projects Info Pages/ENG/dashboard.html">info</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-04-Dashboard/"
                                 target="_blank">preview</a>
@@ -251,7 +251,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">info</a>
+                                href="./Projects Info Pages/ENG/product-preview.html">info</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Product-Preview-Challenge/"
                                 target="_blank">preview</a>
@@ -264,10 +264,10 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">info</a>
-                            <a class="preview btn-shape bg-blue"
+                                href="./Projects Info Pages/ENG/ot.html">info</a>
+                            <!-- <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/OT/"
-                                target="_blank">preview</a>
+                                target="_blank">preview</a> -->
                         </div>
                     </div>
                 </div>
@@ -594,7 +594,7 @@
                 <div class="footer-btns flex-center">
                     <a class="search-bar search-bar-footer flex-center fs-10 br-circle"
                         title="Go to search bar">
-                        <div class="i fa-solid fa-search"></div>
+                        <i class="fa-solid fa-search search-bar"></i>
                     </a>
                     <a class="lang-change flex-center fs-10 br-circle"
                         href="./index-ar.html#footer"
@@ -612,7 +612,6 @@
         </div>
     </footer>
     <script src="./master.js"></script>
-    <script src="/master2.js"></script>
 </body>
 
 </html>
