--- a/index-ar.html
+++ b/index-ar.html
@@ -35,7 +35,7 @@
 
 <body class="both ar">
     <form class="search-page">
-        <i id="cancle-btn" class="fa-solid fa-xmark p-abs"></i>
+        <i id="cancle-btn" class="fa-solid fa-xmark p-abs flex-center"></i>
         <h1 class="p-abs">أكتب عن ماذا تبحث ؟</h1>
         <input type="search" id="search-page" placeholder="بحث ...">
         <button>
@@ -125,7 +125,7 @@
             <div class="header-btns p-abs d-flex">
                 <a class="search-bar flex-center fs-10 br-circle"
                     title="اذهب الى محرك البحث">
-                    <div class="i fa-solid fa-search"></div>
+                    <i class="fa-solid fa-search search-bar "></i>
                 </a>
                 <a class="lang-change flex-center fs-10 br-circle"
                     href="./index.html"
@@ -209,7 +209,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">معلومات</a>
+                                href="./Projects Info Pages/AR/kasper-ar.html">معلومات</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-02-Kaspr/"
                                 target="_blank">معاينة</a>
@@ -222,7 +222,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">معلومات</a>
+                                href="./Projects Info Pages/AR/talib-ar.html">معلومات</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-03-Elzero/"
                                 target="_blank">معاينة</a>
@@ -235,7 +235,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">معلومات</a>
+                                href="./Projects Info Pages/AR/dashboard-ar.html">معلومات</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-04-Dashboard/"
                                 target="_blank">معاينة</a>
@@ -248,7 +248,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">معلومات</a>
+                                href="./Projects Info Pages/AR/product-preview-ar.html">معلومات</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Product-Preview-Challenge/"
                                 target="_blank">معاينة</a>
@@ -261,10 +261,10 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue"
+                                href="./Projects Info Pages/AR/ot-ar.html">معلومات</a>
+                            <!-- <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/OT/"
-                                target="_blank">معاينة</a>
+                                target="_blank">معاينة</a> -->
                         </div>
                     </div>
                 </div>
@@ -585,7 +585,7 @@
                 <div class="footer-btns flex-center">
                     <a class="search-bar search-bar-footer flex-center fs-10 br-circle"
                         title="اذهب الى محرك البحث">
-                        <div class="i fa-solid fa-search"></div>
+                        <i class="fa-solid fa-search search-bar flex-center"></i>
                     </a>
                     <a class="lang-change flex-center fs-10 br-circle"
                         href="./index.html#footer"
@@ -603,7 +603,6 @@
         </div>
     </footer>
     <script src="./master.js"></script>
-    <script src="/master2.js"></script>
 </body>
 
 </html>
